--- a/packages.html
+++ b/packages.html
@@ -115,7 +115,7 @@
           <ul class="navbar-list">
 
             <li>
-              <a href="#home" class="navbar-link" data-nav-link>home</a>
+              <a href="index.html" class="navbar-link" data-nav-link>home</a>
             </li>
 
             <li>
@@ -123,19 +123,19 @@
             </li>
 
             <li>
-              <a href="#destination" class="navbar-link" data-nav-link>destination</a>
+              <a href="index.html#destination" class="navbar-link" data-nav-link>destination</a>
             </li>
 
             <li>
-              <a href="#package" class="navbar-link" data-nav-link>packages</a>
+              <a href="index.html#package" class="navbar-link" data-nav-link>packages</a>
             </li>
 
             <li>
-              <a href="#gallery" class="navbar-link" data-nav-link>gallery</a>
+              <a href="index.html#gallery" class="navbar-link" data-nav-link>gallery</a>
             </li>
 
             <li>
-              <a href="#contact" class="navbar-link" data-nav-link>contact us</a>
+              <a href="index.html#contact" class="navbar-link" data-nav-link>contact us</a>
             </li>
 
           </ul>
@@ -148,9 +148,6 @@
     </div>
 
   </header>
-
-
-
 
 
   <main>
@@ -188,7 +185,7 @@
         - #TOUR SEARCH
       -->
 
-      <section class="tour-search">
+      <!-- <section class="tour-search">
         <div class="container">
 
           <form action="" class="tour-search-form">
@@ -223,145 +220,9 @@
           </form>
 
         </div>
-      </section>
+      </section> -->
 
-
-
-
-
-      <!-- 
-        - #POPULAR
-      -->
-
-      <section class="popular" id="destination">
-        <div class="container">
-
-          <p class="section-subtitle">Uncover place</p>
-
-          <h2 class="h2 section-title">Popular destination</h2>
-
-          <p class="section-text">
-             so here the propaganda wants to be matched with some people, just the first ones, and no one, makeup. The appearance of the praisers.
-            Let it be decorated
-            elasticity is held, fit.
-          </p>
-
-          <ul class="popular-list">
-
-            <li>
-              <div class="popular-card">
-
-                <figure class="card-img">
-                  <img src="./assets/images/popular-1.jpg" alt="San miguel, italy" loading="lazy">
-                </figure>
-
-                <div class="card-content">
-
-                  <div class="card-rating">
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                  </div>
-
-                  <p class="card-subtitle">
-                    <a href="#">Italy</a>
-                  </p>
-
-                  <h3 class="h3 card-title">
-                    <a href="#">San miguel</a>
-                  </h3>
-
-                  <p class="card-text">
-                     It seems to me that some of these people want to spread the word.
-                  </p>
-
-                </div>
-
-              </div>
-            </li>
-
-            <li>
-              <div class="popular-card">
-
-                <figure class="card-img">
-                  <img src="./assets/images/popular-2.jpg" alt="Burj khalifa, dubai" loading="lazy">
-                </figure>
-
-                <div class="card-content">
-
-                  <div class="card-rating">
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                  </div>
-
-                  <p class="card-subtitle">
-                    <a href="#">Dubai</a>
-                  </p>
-
-                  <h3 class="h3 card-title">
-                    <a href="#">Burj khalifa</a>
-                  </h3>
-
-                  <p class="card-text">
-                    It seems to me that some of these people want to spread the word.
-                  </p>
-
-                </div>
-
-              </div>
-            </li>
-
-            <li>
-              <div class="popular-card">
-
-                <figure class="card-img">
-                  <img src="./assets/images/popular-3.jpg" alt="Kyoto temple, japan" loading="lazy">
-                </figure>
-
-                <div class="card-content">
-
-                  <div class="card-rating">
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                  </div>
-
-                  <p class="card-subtitle">
-                    <a href="#">Japan</a>
-                  </p>
-
-                  <h3 class="h3 card-title">
-                    <a href="#">Kyoto temple</a>
-                  </h3>
-
-                  <p class="card-text">
-                     It seems to me that some of these people want to spread the word.
-                  </p>
-
-                </div>
-
-              </div>
-            </li>
-
-          </ul>
-
-          <button class="btn btn-primary">More destintion</button>
-
-        </div>
-      </section>
-
-
-
-
-
-      <!-- 
+<!-- 
         - #PACKAGE
       -->
 
@@ -601,82 +462,307 @@
               </div>
             </li>
 
+            <li>
+                <div class="package-card">
+  
+                  <figure class="card-banner">
+                    <img src="./assets/images/new Images/about-content-bg.jpg" alt="Experience The Great Holiday On Beach" loading="lazy">
+                  </figure>
+  
+                  <div class="card-content">
+  
+                    <h3 class="h3 card-title">Experience The Great Holiday On Beach</h3>
+  
+                    <p class="card-text">
+                     Laoreet, the pleasures are nothing to worry about, 
+                     I'll explain to you the real estate, it's a freight forwarder! And she, tomorrow, is asperated.
+                    </p>
+  
+                    <ul class="card-meta-list">
+  
+                      <li class="card-meta-item">
+                        <div class="meta-box">
+                          <ion-icon name="time"></ion-icon>
+  
+                          <p class="text">7D/6N</p>
+                        </div>
+                      </li>
+  
+                      <li class="card-meta-item">
+                        <div class="meta-box">
+                          <ion-icon name="people"></ion-icon>
+  
+                          <p class="text">pax: 10</p>
+                        </div>
+                      </li>
+  
+                      <li class="card-meta-item">
+                        <div class="meta-box">
+                          <ion-icon name="location"></ion-icon>
+  
+                          <p class="text">Malaysia</p>
+                        </div>
+                      </li>
+  
+                    </ul>
+  
+                  </div>
+  
+                  <div class="card-price">
+  
+                    <div class="wrapper">
+  
+                      <p class="reviews">(25 reviews)</p>
+  
+                      <div class="card-rating">
+                        <ion-icon name="star"></ion-icon>
+                        <ion-icon name="star"></ion-icon>
+                        <ion-icon name="star"></ion-icon>
+                        <ion-icon name="star"></ion-icon>
+                        <ion-icon name="star"></ion-icon>
+                      </div>
+  
+                    </div>
+  
+                    <p class="price">
+                      $700
+                      <span>/ per person</span>
+                    </p>
+  
+                    <button class="btn btn-secondary">Book Now</button>
+  
+                  </div>
+  
+                </div>
+              </li>
+
+              <li>
+                <div class="package-card">
+  
+                  <figure class="card-banner">
+                    <img src="./assets/images/new Images/country-02.jpg" alt="Experience The Great Holiday On Beach" loading="lazy">
+                  </figure>
+  
+                  <div class="card-content">
+  
+                    <h3 class="h3 card-title">Experience The Great Holiday On Beach</h3>
+  
+                    <p class="card-text">
+                     Laoreet, the pleasures are nothing to worry about, 
+                     I'll explain to you the real estate, it's a freight forwarder! And she, tomorrow, is asperated.
+                    </p>
+  
+                    <ul class="card-meta-list">
+  
+                      <li class="card-meta-item">
+                        <div class="meta-box">
+                          <ion-icon name="time"></ion-icon>
+  
+                          <p class="text">7D/6N</p>
+                        </div>
+                      </li>
+  
+                      <li class="card-meta-item">
+                        <div class="meta-box">
+                          <ion-icon name="people"></ion-icon>
+  
+                          <p class="text">pax: 10</p>
+                        </div>
+                      </li>
+  
+                      <li class="card-meta-item">
+                        <div class="meta-box">
+                          <ion-icon name="location"></ion-icon>
+  
+                          <p class="text">Malaysia</p>
+                        </div>
+                      </li>
+  
+                    </ul>
+  
+                  </div>
+  
+                  <div class="card-price">
+  
+                    <div class="wrapper">
+  
+                      <p class="reviews">(25 reviews)</p>
+  
+                      <div class="card-rating">
+                        <ion-icon name="star"></ion-icon>
+                        <ion-icon name="star"></ion-icon>
+                        <ion-icon name="star"></ion-icon>
+                        <ion-icon name="star"></ion-icon>
+                        <ion-icon name="star"></ion-icon>
+                      </div>
+  
+                    </div>
+  
+                    <p class="price">
+                      $850
+                      <span>/ per person</span>
+                    </p>
+  
+                    <button class="btn btn-secondary">Book Now</button>
+  
+                  </div>
+  
+                </div>
+              </li>
+
+              <li>
+                <div class="package-card">
+  
+                  <figure class="card-banner">
+                    <img src="./assets/images/new Images/country-03.jpg" alt="Experience The Great Holiday On Beach" loading="lazy">
+                  </figure>
+  
+                  <div class="card-content">
+  
+                    <h3 class="h3 card-title">Experience The Great Holiday On Beach</h3>
+  
+                    <p class="card-text">
+                     Laoreet, the pleasures are nothing to worry about, 
+                     I'll explain to you the real estate, it's a freight forwarder! And she, tomorrow, is asperated.
+                    </p>
+  
+                    <ul class="card-meta-list">
+  
+                      <li class="card-meta-item">
+                        <div class="meta-box">
+                          <ion-icon name="time"></ion-icon>
+  
+                          <p class="text">7D/6N</p>
+                        </div>
+                      </li>
+  
+                      <li class="card-meta-item">
+                        <div class="meta-box">
+                          <ion-icon name="people"></ion-icon>
+  
+                          <p class="text">pax: 10</p>
+                        </div>
+                      </li>
+  
+                      <li class="card-meta-item">
+                        <div class="meta-box">
+                          <ion-icon name="location"></ion-icon>
+  
+                          <p class="text">Malaysia</p>
+                        </div>
+                      </li>
+  
+                    </ul>
+  
+                  </div>
+  
+                  <div class="card-price">
+  
+                    <div class="wrapper">
+  
+                      <p class="reviews">(25 reviews)</p>
+  
+                      <div class="card-rating">
+                        <ion-icon name="star"></ion-icon>
+                        <ion-icon name="star"></ion-icon>
+                        <ion-icon name="star"></ion-icon>
+                        <ion-icon name="star"></ion-icon>
+                        <ion-icon name="star"></ion-icon>
+                      </div>
+  
+                    </div>
+  
+                    <p class="price">
+                      $550
+                      <span>/ per person</span>
+                    </p>
+  
+                    <button class="btn btn-secondary">Book Now</button>
+  
+                  </div>
+  
+                </div>
+              </li>
+
+              <li>
+                <div class="package-card">
+  
+                  <figure class="card-banner">
+                    <img src="./assets/images/new Images/deals-02.jpg"  alt="Experience The Great Holiday On Beach" loading="lazy">
+                  </figure>
+  
+                  <div class="card-content">
+  
+                    <h3 class="h3 card-title">Experience The Great Holiday On Beach</h3>
+  
+                    <p class="card-text">
+                     Laoreet, the pleasures are nothing to worry about, 
+                     I'll explain to you the real estate, it's a freight forwarder! And she, tomorrow, is asperated.
+                    </p>
+  
+                    <ul class="card-meta-list">
+  
+                      <li class="card-meta-item">
+                        <div class="meta-box">
+                          <ion-icon name="time"></ion-icon>
+  
+                          <p class="text">7D/6N</p>
+                        </div>
+                      </li>
+  
+                      <li class="card-meta-item">
+                        <div class="meta-box">
+                          <ion-icon name="people"></ion-icon>
+  
+                          <p class="text">pax: 10</p>
+                        </div>
+                      </li>
+  
+                      <li class="card-meta-item">
+                        <div class="meta-box">
+                          <ion-icon name="location"></ion-icon>
+  
+                          <p class="text">Malaysia</p>
+                        </div>
+                      </li>
+  
+                    </ul>
+  
+                  </div>
+  
+                  <div class="card-price">
+  
+                    <div class="wrapper">
+  
+                      <p class="reviews">(25 reviews)</p>
+  
+                      <div class="card-rating">
+                        <ion-icon name="star"></ion-icon>
+                        <ion-icon name="star"></ion-icon>
+                        <ion-icon name="star"></ion-icon>
+                        <ion-icon name="star"></ion-icon>
+                        <ion-icon name="star"></ion-icon>
+                      </div>
+  
+                    </div>
+  
+                    <p class="price">
+                      $750
+                      <span>/ per person</span>
+                    </p>
+  
+                    <button class="btn btn-secondary">Book Now</button>
+  
+                  </div>
+  
+                </div>
+              </li>
+
           </ul>
 
-         <a href="packages.html"> <button class="btn btn-primary">View All Packages</button></a>
 
         </div>
       </section>
-
-
-
-
-
-      <!-- 
-        - #GALLERY
-      -->
-
-      <section class="gallery" id="gallery">
-        <div class="container">
-
-          <p class="section-subtitle">Photo Gallery</p>
-
-          <h2 class="h2 section-title">Photo's From Travellers</h2>
-
-          <p class="section-text">
-           It seems to me that some people want to make this announcement,
-            but only the first ones, and no one else. The appearance of the praisers. It is bound to adorn the elasticity, fit.
-          </p>
-
-          <ul class="gallery-list">
-
-            <li class="gallery-item">
-              <figure class="gallery-image">
-                <img src="./assets/images/gallery-1.jpg" alt="Gallery image">
-              </figure>
-            </li>
-
-            <li class="gallery-item">
-              <figure class="gallery-image">
-                <img src="./assets/images/gallery-2.jpg" alt="Gallery image">
-              </figure>
-            </li>
-
-            <li class="gallery-item">
-              <figure class="gallery-image">
-                <img src="./assets/images/gallery-3.jpg" alt="Gallery image">
-              </figure>
-            </li>
-
-            <li class="gallery-item">
-              <figure class="gallery-image">
-                <img src="./assets/images/gallery-4.jpg" alt="Gallery image">
-              </figure>
-            </li>
-
-            <li class="gallery-item">
-              <figure class="gallery-image">
-                <img src="./assets/images/gallery-5.jpg" alt="Gallery image">
-              </figure>
-            </li>
-
-          </ul>
-
-        </div>
-      </section>
-
-
-
-
-
-      <!-- 
-        - #CTA
-      -->
-
-      
-
-    </article>
-  </main>
 
 
 
