--- a/packages.html
+++ b/packages.html
@@ -142,7 +142,7 @@
 
         </nav>
 
-        <button class="btn btn-primary">Book Now</button>
+       <a href="Book.html"> <button class="btn btn-primary">Book Now</button></a>
 
       </div>
     </div>
@@ -171,7 +171,7 @@
           <div class="btn-group">
             <button class="btn btn-primary">Learn more</button>
 
-            <button class="btn btn-secondary">Book now</button>
+            <a href="Book.html"><button class="btn btn-secondary">Book Now</button></a>
           </div>
 
         </div>
@@ -307,7 +307,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <button class="btn btn-secondary">Book Now</button>
+                  <a href="Book.html"><button class="btn btn-secondary">Book Now</button></a>
 
                 </div>
 
@@ -381,7 +381,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <button class="btn btn-secondary">Book Now</button>
+                  <a href="Book.html"><button class="btn btn-secondary">Book Now</button></a>
 
                 </div>
 
@@ -455,7 +455,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <button class="btn btn-secondary">Book Now</button>
+                  <a href="Book.html"><button class="btn btn-secondary">Book Now</button></a>
 
                 </div>
 
@@ -529,7 +529,7 @@
                       <span>/ per person</span>
                     </p>
   
-                    <button class="btn btn-secondary">Book Now</button>
+                    <a href="Book.html"><button class="btn btn-secondary">Book Now</button></a>
   
                   </div>
   
@@ -603,7 +603,7 @@
                       <span>/ per person</span>
                     </p>
   
-                    <button class="btn btn-secondary">Book Now</button>
+                    <a href="Book.html"><button class="btn btn-secondary">Book Now</button></a>
   
                   </div>
   
@@ -677,7 +677,7 @@
                       <span>/ per person</span>
                     </p>
   
-                    <button class="btn btn-secondary">Book Now</button>
+                    <a href="Book.html"><button class="btn btn-secondary">Book Now</button></a>
   
                   </div>
   
@@ -751,7 +751,7 @@
                       <span>/ per person</span>
                     </p>
   
-                    <button class="btn btn-secondary">Book Now</button>
+                    <a href="Book.html"><button class="btn btn-secondary">Book Now</button></a>
   
                   </div>
   
