edit files phone and link files

--- a/Book.html
+++ b/Book.html
@@ -40,7 +40,7 @@
     <div class="header-top">
       <div class="container">
 
-        <a href="tel:+01123456790" class="helpline-box">
+        <a href="tel:+021006902312" class="helpline-box">
 
           <div class="icon-box">
             <ion-icon name="call-outline"></ion-icon>
@@ -142,7 +142,7 @@
 
         </nav>
 
-        <button class="btn btn-primary">Book Now</button>
+        <a href="Book.html"> <button class="btn btn-primary">Book Now</button></a>
 
       </div>
     </div>
@@ -171,7 +171,7 @@
           <div class="btn-group">
             <button class="btn btn-primary">Learn more</button>
 
-            <button class="btn btn-secondary">Book now</button>
+          <a href="#">  <button class="btn btn-secondary">Book now</button></a>
           </div>
 
         </div>
@@ -188,21 +188,21 @@
           <form action="" class="tour-search-form">
 
             <div class="input-wrapper">
-              <label for="destination" class="input-label">Your Name*</label>
+              <label for="Name" class="input-label">Your Name*</label>
 
-              <input type="text" name="destination" id="destination" required placeholder="Enter Your Name"
+              <input type="text" name="Name" id="destination" required placeholder="Enter Your Name"
                 class="input-field">
             </div>
             <div class="input-wrapper">
-              <label for="destination" class="input-label">Email*</label>
+              <label for="Email" class="input-label">Email*</label>
 
-              <input type="email" name="destination" id="destination" required placeholder="Enter Your Email"
+              <input type="email" name="Email" id="Email" required placeholder="Enter Your Email"
                 class="input-field">
             </div>
             <div class="input-wrapper">
-              <label for="destination" class="input-label">Phone*</label>
+              <label for="phone" class="input-label">Phone*</label>
 
-              <input type="tel" name="destination" id="destination" required placeholder="Enter Your Email"
+              <input type="tel" name="phone" id="phone" required placeholder="Enter Your Phone"
                 class="input-field">
             </div>
 
