--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="header-top">
       <div class="container">
 
-        <a href="tel:+01123456790" class="helpline-box">
+        <a href="tel:+021006902312" class="helpline-box">
 
           <div class="icon-box">
             <ion-icon name="call-outline"></ion-icon>
@@ -142,7 +142,7 @@
 
         </nav>
 
-        <button class="btn btn-primary">Book Now</button>
+      <a href="Book.html"> <button class="btn btn-primary">Book Now</button></a>
 
       </div>
     </div>
