--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
         </nav>
 
-      <a href="Book.html"> <button class="btn btn-primary">Book Now</button></a>
+      <a href="Book.php"> <button class="btn btn-primary">Book Now</button></a>
 
       </div>
     </div>
@@ -174,7 +174,7 @@
           <div class="btn-group">
             <button class="btn btn-primary">Learn more</button>
 
-            <a href="Book.html"><button class="btn btn-secondary">Book Now</button></a>
+            <a href="Book.php"><button class="btn btn-secondary">Book Now</button></a>
           </div>
 
         </div>
@@ -446,7 +446,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <a href="Book.html"><button class="btn btn-secondary">Book Now</button></a>
+                  <a href="Book.php"><button class="btn btn-secondary">Book Now</button></a>
 
                 </div>
 
@@ -520,7 +520,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <a href="Book.html"><button class="btn btn-secondary">Book Now</button></a>
+                  <a href="Book.php"><button class="btn btn-secondary">Book Now</button></a>
 
                 </div>
 
@@ -594,7 +594,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <a href="Book.html"><button class="btn btn-secondary">Book Now</button></a>
+                  <a href="Book.php"><button class="btn btn-secondary">Book Now</button></a>
 
                 </div>
 
